--- a/bnz_assignment_Q1_Final.ipynb
+++ b/bnz_assignment_Q1_Final.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jIXsc9-U0l6H",
-        "outputId": "5ea51f6e-dc67-4fa4-80d0-e22902ec3b02"
+        "outputId": "bb61dbfd-4be0-431a-94f5-0521b61162b6"
       },
       "outputs": [
         {
@@ -45,7 +45,7 @@
             "│ Accommodation and Food Services │ 130958.94230769231 │\n",
             "└─────────────────────────────────┴────────────────────┘\n",
             "\n",
-            "time1: 0.007041454315185547\n",
+            "time1: 0.023115873336791992\n",
             "┌─────────────────────────────────┬────────────────────┐\n",
             "│         Series_title_2          │   avg_data_value   │\n",
             "│             varchar             │       double       │\n",
@@ -54,7 +54,7 @@
             "│ Accommodation and Food Services │ 130958.94230769231 │\n",
             "└─────────────────────────────────┴────────────────────┘\n",
             "\n",
-            "time2: 0.008052587509155273\n"
+            "time2: 0.03496885299682617\n"
           ]
         }
       ],
@@ -165,7 +165,9 @@
         "GROUP BY Series_title_2;\n",
         "\n",
         "\"\"\").show()\n",
-        "print(f\"time2: {time.time() - cur_time}\")\n"
+        "print(f\"time2: {time.time() - cur_time}\")\n",
+        "\n",
+        "conn.close()\n"
       ]
     }
   ]
