--- a/bnz_assignment_Q2_Final.ipynb
+++ b/bnz_assignment_Q2_Final.ipynb
@@ -19,22 +19,22 @@
       "execution_count": 1,
       "metadata": {
         "id": "wBKOL_clAs4i",
+        "outputId": "7c03cc9b-508e-4388-8600-ac80beb9cce2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f98c58ac-fe0e-4fbf-86bd-f2906722b56d"
+        }
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "┌────────────┬─────────┬────────────────────┬──────────────────────┬───────────────────────────────────────┬───────────┐\n",
-            "│  database  │ schema  │        name        │     column_names     │             column_types              │ temporary │\n",
-            "│  varchar   │ varchar │      varchar       │      varchar[]       │               varchar[]               │  boolean  │\n",
-            "├────────────┼─────────┼────────────────────┼──────────────────────┼───────────────────────────────────────┼───────────┤\n",
-            "│ employment │ main    │ business_financial │ [Series_reference,…  │ [VARCHAR, DOUBLE, DOUBLE, VARCHAR, …  │ false     │\n",
-            "└────────────┴─────────┴────────────────────┴──────────────────────┴───────────────────────────────────────┴───────────┘\n",
+            "┌───────────┬─────────┬────────────────────┬──────────────────────┬────────────────────────────────────────┬───────────┐\n",
+            "│ database  │ schema  │        name        │     column_names     │              column_types              │ temporary │\n",
+            "│  varchar  │ varchar │      varchar       │      varchar[]       │               varchar[]                │  boolean  │\n",
+            "├───────────┼─────────┼────────────────────┼──────────────────────┼────────────────────────────────────────┼───────────┤\n",
+            "│ financial │ main    │ business_financial │ [Series_reference,…  │ [VARCHAR, DOUBLE, DOUBLE, VARCHAR, V…  │ false     │\n",
+            "└───────────┴─────────┴────────────────────┴──────────────────────┴────────────────────────────────────────┴───────────┘\n",
             "\n",
             "┌─────────┬─────────────────┬────────────┐\n",
             "│ Period  │ Series_title_2  │ Data_value │\n",
@@ -43,7 +43,7 @@
             "│ 2023.03 │ Wholesale Trade │  38810.022 │\n",
             "└─────────┴─────────────────┴────────────┘\n",
             "\n",
-            "time1: 0.011487245559692383\n",
+            "time1: 0.012524604797363281\n",
             "┌─────────┬─────────────────┬────────────┐\n",
             "│ Period  │ Series_title_2  │ Data_value │\n",
             "│ double  │     varchar     │   double   │\n",
@@ -51,7 +51,7 @@
             "│ 2023.03 │ Wholesale Trade │  38810.022 │\n",
             "└─────────┴─────────────────┴────────────┘\n",
             "\n",
-            "time2: 0.007699489593505859\n"
+            "time2: 0.007618904113769531\n"
           ]
         }
       ],
@@ -83,7 +83,7 @@
         "    zip_ref.extractall(extracted_dir)\n",
         "\n",
         "# create Duckdb Database\n",
-        "conn = duckdb.connect(\"employment.db\")\n",
+        "conn = duckdb.connect(\"financial.db\")\n",
         "\n",
         "\n",
         "create_table_query2 = f\"\"\"\n",
